--- a/notebooks/nepal-live.ipynb
+++ b/notebooks/nepal-live.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,28 @@
     "import folium.features \n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "import vincent"
+    "import vincent\n",
+    "from ipywidgets import AppLayout, Button, Layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
@@ -29,9 +43,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import requests\n",
+    "def death_nepal():\n",
+    "    url = \"https://nepalcorona.info/api/v1/data/nepal\"\n",
+    "    response = requests.get(url)\n",
+    "    todos = json.loads(response.text)\n",
+    "    return todos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width: 50%;display: block;margin-bottom: 20px;\"><div style=\"float: left;width: 50%;padding: 0 10px;\"><div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 16px;text-align: center;background-color: #f1f1f1;\"><h3>\"+total_positive+\"</h3><p>Total Positive</p></div></div><div style=\"float: left;width: 50%;padding: 0 10px;\"><div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 16px;text-align: center;background-color: #f1f1f1;\" ><h3>\"+tested_total+\"</h3><p>Total Tested</p></div></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tested_positive = \"16\"\n",
+    "tested_total=\"625\"\n",
+    "in_isolation=\"12\"\n",
+    "pending_result=\"35\"\n",
+    "recovered=\"1\"\n",
+    "deaths=\"0\"\n",
+    "updated_at=\"Now date\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "# display(HTML('<div style=\"float: left;width: 20%;padding: 0 10px;><div style=\"float: left;width: 25%;padding: 0 10px;\"><divstyle=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); padding: 16px; text-align: center; background-color: #f1f1f1;\"><h3>'+tested_positive+'</h3><p>Tested Positive</p><p>Some text</p></div></div><div style=\"float: left;width: 25%;padding: 0 10px;\"><div><h3>Card 1</h3><p>Some text</p><p>Some text</p></div></div></div>'))\n",
+    "display(HTML('<div style=\"width: 50%;display: block;margin-bottom: 20px;\"><div style=\"float: left;width: 50%;padding: 0 10px;\"><div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 16px;text-align: center;background-color: #f1f1f1;\"><h3>\"+total_positive+\"</h3><p>Total Positive</p></div></div><div style=\"float: left;width: 50%;padding: 0 10px;\"><div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);padding: 16px;text-align: center;background-color: #f1f1f1;\" ><h3>\"+tested_total+\"</h3><p>Total Tested</p></div></div></div>'))\n",
+    "\n",
+    "#          <div style=\"float: left;width: 25%;padding: 0 10px;\">\n",
+    "\n",
+    "#     <div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);\n",
+    "#   padding: 16px;\n",
+    "#   text-align: center;\n",
+    "#   background-color: #f1f1f1;\">\n",
+    "#       <h3>\"+recovered+\"</h3>\n",
+    "#       <p>Recovered</p>\n",
+    "#     </div>\n",
+    "#   </div>\n",
+    "#   <div style=\"float: left;width: 25%;padding: 0 10px;\">\n",
+    "#     <div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);\n",
+    "#   padding: 16px;\n",
+    "#   text-align: center;\n",
+    "#   background-color: #f1f1f1;\">\n",
+    "#       <h3>\"+deaths+\"</h3>\n",
+    "#       <p>Deaths</p>\n",
+    "#     </div>\n",
+    "#   </div>\n",
+    "#   <div style=\"float: left;width: 25%;padding: 0 10px;\">\n",
+    "#     <div style=\"box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);\n",
+    "#   padding: 16px;\n",
+    "#   text-align: center;\n",
+    "#   background-color: #f1f1f1;\">\n",
+    "#       <h3>\"+in_isolation+\"</h3>\n",
+    "#       <p>Isolation</p>\n",
+    "#     </div>\n",
+    "#   </div> \n",
+    "             \n",
+    "data=death_nepal()\n",
+    "# print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple is green\n"
+     ]
+    }
+   ],
    "source": [
     "with open('nepal-districts-new.geojson') as f:\n",
     "    nepal_districts_geo=json.load(f)\n",
@@ -42,7 +145,7 @@
     "cases_plot_data=pd.read_csv('test_data_cases.csv')\n",
     "\n",
     "#nepal-dash-search\n",
-    "md = folium.Map(location=[28.277433,83.581612], tiles=\"CartoDB positron\",zoom_start=7, max_zoom=32, min_zoom=7,width='100%', height='100%')\n",
+    "md = folium.Map(location=[28.277433,83.581612], tiles=\"CartoDB positron\",zoom_start=7, max_zoom=32, min_zoom=7, width='100%', height='100%')\n",
     "plugins.ScrollZoomToggler().add_to(md)\n",
     "\n",
     "stategeo=folium.GeoJson(\n",
